fix overflow on userlist for small screens

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -697,6 +697,7 @@ tr.spacer {
     display: inline-block;
     text-align: left;
     width: 463px;
+    max-width: 100%;
     margin: 15px 0;
 
     a img {
